testdata/baselines/reference/submodule/compiler/typeGuardNarrowsIndexedAccessOfKnownProperty10.errors.txt
typeGuardNarrowsIndexedAccessOfKnownProperty10.ts(2,7): error TS2322: Type '{}' is not assignable to type '{ [id: string]: number; }'.
  Index signature for type 'string' is missing in type '{}'.
typeGuardNarrowsIndexedAccessOfKnownProperty10.ts(5,6): error TS2448: Block-scoped variable 'id' used before its declaration.


==== typeGuardNarrowsIndexedAccessOfKnownProperty10.ts (2 errors) ====
    interface Foo { bar: any; }
    const bar: { [id: string]: number } = {};
          ~~~
!!! error TS2322: Type '{}' is not assignable to type '{ [id: string]: number; }'.
!!! error TS2322:   Index signature for type 'string' is missing in type '{}'.
    
    (foo: Foo) => {
    	bar[id]++;
    	    ~~
!!! error TS2448: Block-scoped variable 'id' used before its declaration.
!!! related TS2728 typeGuardNarrowsIndexedAccessOfKnownProperty10.ts:6:8: 'id' is declared here.
    	const id = foo.bar;
    }
    